src/test/deca/context/invalid/object/badSelection3.deca
class Y
{
  int y = 10;
}
class X extends Y
{
  int a;
  boolean b = true;
}


class B extends Y
{
  X x = new X();
  float a = B.a;
  }
{
  X x = new X();
}
